<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">City Poi 2.0</string>
    <string name="splash_title"> City POI </string>
    <string name="splash_subtitle"> Points Of Interest</string>
    <string name="show_on_map">Mostrar en mapa</string>
    <string name="show_on_list">Mostrar en lista</string>
    <string name="sample_title">SALA LA RIVIERA</string>
    <string name="about_this_place">Acerca de este local:</string>
    <string name="sample_like_qty">3023</string>
    <string name="toast_no">Esta acción no es posible</string>

    <string name="district_list">Lista Distritos</string>
    <string name="home_title">Ciudades y Distritos</string>
    <string name="pois_default_tittle">Puntos de Interes</string>
    <string name="maps_default_tittle">Vista Mapa</string>

    <string name="Poi_saved">POIs Guardados</string>

    <string name="accept">ACEPTAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="loading">Cargando…</string>
    <string name="test_header">PRUEBAS CABECERA</string>
    <string name="btn_start">COMENZAR</string>
    <string name="splash_text_sevilla">Madrid</string>
    <string name="splash_text_madrid">Málaga</string>
    <string name="splash_text_barcelona">Sevilla,Ceuta</string>
    <string name="loader_text">Cargando, por favor espere</string>

    <string name="bottom_sheet_tittle">"AVISO ALMACENAMIENTO"</string>
    <string name="bottom_sheet_tittle_delete">"AVISO BORRADO"</string>
    <string name="bottom_sheet_message_save">"¿Desea guardar este punto de interes en favoritos?"</string>
    <string name="bottom_sheet_message_delete">"¿Desea eliminar este punto de interes de favoritos?"</string>

    <!--Carousel-->
    <string name="carousel_next_button">Next</string>
    <string name="carousel_back_button">Back</string>
    <string name="carousel_page_description">Presentation carousel</string>
</resources>